# PlanForge

./: .gitignore  .harper-dictionary.txt  Apptainer.def  Cargo.toml  README.md  devenv.nix  devenv.yaml  task.md  test_cost_real.rs  todos.md
planforge/: Cargo.toml
planforge-preprocessor/: Cargo.toml
planforge-preprocessor/src/: lib.rs  main.rs
planforge-py/: Cargo.toml  pyproject.toml
planforge-py/src/: lib.rs
planforge-py/tests/: test_smoke.py
planforge-search/: Cargo.toml
planforge-search/src/: causal_graph.rs  config.rs  evaluation.rs  lib.rs  numeric.rs  resource_limits.rs  successor_generator.rs  task_restriction.rs
planforge-search/src/causal_graph/: tests.rs
planforge-search/src/evaluation/: abstraction_task.rs  cegar.rs  evaluator.rs  ff_heuristic.rs  g_evaluator.rs  heuristic.rs
planforge-search/src/evaluation/abstraction_collections/: canonical_heuristic.rs  component.rs  cost_partitioning.rs  max_heuristic.rs  mod.rs  portfolio.rs  saturated_cost_partitioning_online_heuristic.rs  transition_cost_partitioning.rs
planforge-search/src/evaluation/abstraction_collections/canonical_heuristic/: tests.rs
planforge-search/src/evaluation/cartesian_abstractions/: icaps26.rs  mod.rs  tests.rs
planforge-search/src/evaluation/domain_abstractions/: abstract_operator_generator.rs  additive_numeric_views.rs  cegar.rs  comparison_expression.rs  domain_abstraction.rs  domain_abstraction_collection_generator_multiple_cegar.rs  domain_abstraction_factory.rs  domain_abstraction_generator.rs  domain_abstraction_heuristic.rs  memory_padding.rs  mod.rs  numeric_context.rs  utils.rs
planforge-search/src/evaluation/g_evaluator/: tests.rs
planforge-search/src/evaluation/numeric_landmarks/: lm_cut_numeric_heuristic.rs  numeric_bound.rs  numeric_helper.rs  numeric_lm_cut_landmarks.rs
planforge-search/src/evaluation/pattern_databases/: canonical_pdb_heuristic.rs  compiled_axiom_evaluator.rs  max_additive_subsets.rs  mod.rs  numeric_size_estimator.rs  pattern_collection.rs  pattern_collection_information.rs  pattern_database.rs  pattern_generator_greedy.rs  pattern_generator_systematic.rs  pdb_collection.rs  pdb_heuristic.rs  projected_task.rs  utils.rs  variable_order_finder.rs
planforge-search/src/numeric/: evaluation.rs  search_engine.rs  successor_generator.rs
planforge-search/src/numeric/evaluation/: evaluator.rs  ff_heuristic.rs  g_evaluator.rs  heuristic.rs  tests.rs
planforge-search/src/numeric/open_lists/: open_list.rs
planforge-search/src/numeric/search/: config.rs  engine.rs  mod.rs  open_list.rs  policy.rs  space.rs  stats.rs  tests.rs
planforge-search/src/numeric/search_engine/: tests.rs
planforge-search/src/numeric/successor_generator/: tests.rs
planforge-search/src/open_lists/: open_list.rs
planforge-search/src/open_lists/tiebreaking_open_list/: tests.rs
planforge-search/src/search/: config.rs  engine.rs  mod.rs  open_list.rs  policy.rs  space.rs  stats.rs  tests.rs
planforge-search/src/successor_generator/: tests.rs
planforge-searcher/: Cargo.toml
planforge-searcher/src/: abstraction_config.rs  lib.rs  main.rs  recursive_config.rs
planforge-searcher/src/recursive_config/: tests.rs
planforge-translate/: Cargo.toml
planforge-translate/src/: build_model.rs  constraints.rs  fact_groups.rs  greedy_join.rs  invariant_finder.rs  invariants.rs  lib.rs  numeric_axiom_rules.rs  simplify.rs  split_rules.rs  translate.rs
planforge-translate/src/pddl/: actions.rs  axioms.rs  f_expression.rs  functions.rs  tasks.rs
planforge-translate/src/pddl_parser/: pddl_file.rs
planforge-translate/src/preprocess/: axiom.rs  causal_graph.rs  domain_transition_graph.rs  helper_functions.rs  mod.rs  mutex_group.rs  operator.rs  state.rs  successor_generator.rs  variable.rs
planforge-translate/src/preprocess/operator/: tests.rs
planforge-translator/: Cargo.toml
planforge-translator/src/: lib.rs  main.rs
planforge/src/: lib.rs  main.rs  tests.rs
planners/: Cargo.toml
planners-preprocessor/: Cargo.toml
planners-preprocessor/src/: lib.rs  main.rs
planners-search/: Cargo.toml
planners-search/src/: lib.rs  numeric.rs  search_algorithm.rs
planners-search/src/numeric/: evaluation.rs  open_lists.rs  search_engine.rs  successor_generator.rs
planners-search/src/numeric/evaluation/: evaluator.rs  g_evaluator.rs  heuristic.rs  mod.rs  tests.rs
planners-search/src/numeric/open_lists/: open_list.rs  tiebreaking_open_list.rs
planners-search/src/numeric/search_engine/: tests.rs
planners-search/src/numeric/successor_generator/: tests.rs
planners-searcher/: Cargo.toml
planners-searcher/src/: lib.rs  main.rs  recursive_config.rs
planners-searcher/src/recursive_config/: tests.rs
planners-translator/: Cargo.toml
planners-translator/src/: lib.rs  main.rs
planners/src/: lib.rs  main.rs  tests.rs
tests/: Cargo.toml  pddl_integration.rs
tests/assets/numeric-pddl-files/counters-sym/: domain.pddl  problem_2.pddl
tests/assets/numeric-pddl-files/depots/: pfile1.fd_blind.json
tests/assets/numeric-pddl-files/depots-sym/: domain.pddl  pfile1.fd_blind.json
tests/assets/numeric-pddl-files/farmland/: prob_2_100_1229_scale.fd_blind.json
tests/assets/numeric-pddl-files/farmland2/: prob_2_100_1229_scale.fd_blind.json
tests/assets/numeric-pddl-files/fn-counters-small_instances/: problem_2.fd_blind.json
tests/assets/numeric-pddl-files/forestfire/: prob01.fd_blind.json
tests/assets/numeric-pddl-files/plant-watering/: prob_4_1_1.fd_blind.json
tests/assets/numeric-pddl-files/rover-unit/: pfile1.fd_blind.json  pfile1.pddl
tests/assets/numeric-pddl-files/sailing/: prob_1_1_1229.fd_blind.json  prob_1_1_1229.pddl
tests/assets/numeric-pddl-files/sailing-simple/: README.md  domain.pddl  prob_1b1p_diag.pddl  prob_1b1p_far.pddl  prob_1b1p_x.pddl  prob_1b2p_diag.pddl  prob_1b2p_x.pddl  prob_1b4p_axes.pddl  prob_2b1p.pddl  prob_2b2p_assign.pddl  prob_2b2p_x.pddl
tests/assets/numeric-pddl-files/satellite/: pfile1.fd_blind.json
tests/src/: fd_blind_regression_tests.rs  lib.rs  sailing_interval_splitting_tests.rs  sailing_simple_tests.rs
(+474 files in other folders)
