[workspace]
default-members = [
    "planners-sas",
    "planners-preprocess",
    "planners-preprocessor",
    "planners-search",
    "planners-searcher",
    "planners",
    "planners-cli-utils",
    "tests",
]

members = [
    "planners-sas",
    "planners-translate",
    "planners-translator",
    "planners-preprocess",
    "planners-preprocessor",
    "planners-search",
    "planners-searcher",
    "planners",
    "planners-cli-utils",
    "tests",
]

resolver = "2"

[profile.release]
lto = true
# `codegen-units = 1` allows a more optimized compilation.
codegen-units = 1
