[workspace]
default-members = [
    "planforge-sas",
    "planforge-translate",
    "planforge-translator",
    "planforge-search",
    "planforge-searcher",
    "planforge",
    "planforge-cli-utils",
    "planforge-portfolio",
    "planforge-config-derive",
    "tests",
]

members = [
    "planforge-sas",
    "planforge-translate",
    "planforge-translator",
    "planforge-search",
    "planforge-searcher",
    "planforge",
    "planforge-py",
    "planforge-cli-utils",
    "planforge-portfolio",
    "planforge-config-derive",
    "tutorials/rust-goal-count",
    "tests",
]

resolver = "2"

[profile.release]
lto = true
# `codegen-units = 1` allows a more optimized compilation.
codegen-units = 1
# Uncomment this for profiling.
debug = "line-tables-only"
