[package]
name = "planforge-preprocessor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planforge-preprocessor"
doc = false

[dependencies]
planforge-translate = { path = "../planforge-translate" }
planforge-translator = { path = "../planforge-translator" }
planforge-sas = { path = "../planforge-sas" }
planforge-cli-utils = { path = "../planforge-cli-utils" }
clap = { version = "4", features = ["derive"] }
time = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
    "time",
] }

