[package]
name = "planforge-py"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[lib]
name = "planforge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
planforge-core = { package = "planforge", path = "../planforge" }
planforge-search = { path = "../planforge-search" }
planforge-searcher = { path = "../planforge-searcher" }
planforge-sas = { path = "../planforge-sas" }
planforge-translator = { path = "../planforge-translator" }
planforge-translate = { path = "../planforge-translate" }
