[package]
name = "planforge"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planforge"
doc = false

[dependencies]
planforge-sas = { path = "../planforge-sas" }
planforge-translate = { path = "../planforge-translate" }
planforge-translator = { path = "../planforge-translator" }
planforge-search = { path = "../planforge-search" }
planforge-searcher = { path = "../planforge-searcher" }
planforge-cli-utils = { path = "../planforge-cli-utils" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
time = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
    "time",
] }
ordered-float = "5.1.0"
