[package]
name = "planners-preprocessor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "planners-preprocessor"
doc = false

[dependencies]
planners-preprocess = { path = "../planners-preprocess" }
planners-translator = { path = "../planners-translator" }
planners-sas = { path = "../planners-sas" }
planners-cli-utils = { path = "../planners-cli-utils" }
clap = { version = "4", features = ["derive"] }
