[package]
name = "planners-preprocessor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planners-preprocessor"
doc = false

[dependencies]
planners-preprocess = { path = "../planners-preprocess" }
planners-translator = { path = "../planners-translator" }
planners-sas = { path = "../planners-sas" }
planners-cli-utils = { path = "../planners-cli-utils" }
clap = { version = "4", features = ["derive"] }
time = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
    "time",
] }

