[package]
name = "planners-search"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0"

[dependencies]
planners-sas = { path = "../planners-sas" }
planners-preprocess = { path = "../planners-preprocess" }
libc = "0.2"
log = { version = "0.4", features = ["serde"] }
ordered-float = "5.1.0"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
itertools = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
rustc-hash = "2"
