[package]
name = "planners-searcher"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planners-searcher"
doc = false

[dependencies]
planners-sas = { path = "../planners-sas" }
planners-search = { path = "../planners-search" }
planners-cli-utils = { path = "../planners-cli-utils" }
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11", features = ["humantime"] }
serde = { version = "1", features = ["derive"] }
