[package]
name = "planners-searcher"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planners-searcher"
doc = false

[dependencies]
planners-sas = { path = "../planners-sas" }
planners-search = { path = "../planners-search" }
planners-cli-utils = { path = "../planners-cli-utils" }
clap = { version = "4", features = ["derive"] }
time = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
    "time",
] }
serde = { version = "1", features = ["derive"] }
