[package]
name = "planners-translator"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[[bin]]
name = "planners-translator"
doc = false

[dependencies]
planners-translate = { path = "../planners-translate" }
planners-preprocess = { path = "../planners-preprocess" }
planners-cli-utils = { path = "../planners-cli-utils" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11", features = ["humantime"] }
