[package]
name = "planners"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "planners"
doc = false

[dependencies]
planners-sas = { path = "../planners-sas" }
planners-translate = { path = "../planners-translate" }
planners-translator = { path = "../planners-translator" }
planners-preprocess = { path = "../planners-preprocess" }
planners-preprocessor = { path = "../planners-preprocessor" }
planners-search = { path = "../planners-search" }
planners-searcher = { path = "../planners-searcher" }
planners-cli-utils = { path = "../planners-cli-utils" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
