[package]
name = "planners"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "planners"
doc = false

[dependencies]
planners-sas = { path = "../planners-sas" }
planners-translate = { path = "../planners-translate" }
planners-translator = { path = "../planners-translator" }
planners-preprocess = { path = "../planners-preprocess" }
planners-preprocessor = { path = "../planners-preprocessor" }
planners-search = { path = "../planners-search" }
planners-searcher = { path = "../planners-searcher" }
planners-cli-utils = { path = "../planners-cli-utils" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
log = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.11", features = ["humantime"] }
ordered-float = "5.1.0"
