[package]
name = "tests"
description = "Integration tests"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
planners-preprocess = { path = "../planners-preprocess" }
planners-sas = { path = "../planners-sas" }
planners-search = { path = "../planners-search" }
planners-translate = { path = "../planners-translate" }
planners-translator = { path = "../planners-translator" }
anyhow = "1"
serde_json = "1"
