[package]
name = "tests"
description = "Integration tests"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
planforge-preprocess = { path = "../planforge-preprocess" }
planforge-sas = { path = "../planforge-sas" }
planforge-search = { path = "../planforge-search" }
planforge-translate = { path = "../planforge-translate" }
planforge-translator = { path = "../planforge-translator" }
anyhow = "1"
serde_json = "1"
